+   new feature
*   change
-   bug fix
AV  access violation

VER 2.4
propaganda
  New mobile-friendly template
  Unicode support
  New encrypted login, and logout
/propaganda
+ new default template
+ new login system, session based, with logout
+ {.set item|name.}
+ {.get item|icon.}
+ {.set cfg.}
+ cache for jquery and template sections
+ new template commands: base64, base64decode, md5, sha1
+ hfs.diff.*.tpl in exe's folder
- fixed template handling of section names with both '+' and '=' present
- fixed LNK files to deleted items
- fixed comments files were not updated upon deletion of files
- fixed "requesting" forever with empty cookies http://rejetto.com/forum/index.php?topic=13112.0
- fixed double "Content-Length" header on compressed pages
- fixed log text base color not matching system settings http://rejetto.com/forum/index.php?topic=13233.0

VER 2.3m
propaganda
  Bug fixes
/propaganda
+ initial localization support http://www.rejetto.com/forum/programmers-corner/translations-to-other-languages/
+ {.remove header.}
- fixed error pages' loading problem http://www.rejetto.com/forum/bug-reports/httpauth-challenge-http-headers-bug/
- fixed error with {.load.} with size exceeding real size http://rejetto.com/forum/index.php?topic=12059.msg1062781#msg1062781
- fixed template translation issues http://rejetto.com/forum/index.php?topic=11880.msg1062167#msg1062167

VER 2.3k
propaganda
  Bug fixes
/propaganda
- fixed {.rename.} {.move.} and {.delete.} with lnk files
- fixed slowness problem introduced in previous release http://www.rejetto.com/forum/hfs-~-http-file-server/very-slow-loading-on-2-3j-with-userpass-folders/
- fixed management of user/pass overlapping accounts
- fiexd invisible window http://www.rejetto.com/forum/hfs-~-http-file-server/new-version-2-3j/msg1062129/#msg1062129

VER 2.3j
propaganda
   Security and bug fixes
/propaganda
- prevent upload and rename of .lnk files
- cache system didn't recognize sub-second changes